@@ -24,6 +24,5 @@
 - move pmatch etc into struct mail to avoid pointer nonsense?
 - add some of the other non-useless stuff reformail can do, if any
 - write/append/pipe would benefit from add-from per stdout
-- -D should override macros in file
 - document server_uid
 - document add-header, lines/body_lines/header_lines
