@@ -1,3 +1,9 @@
+04 March 2007
+
+* Bug fix: fill in the correct size for maildir fetched mail rather than using
+  the rounded-up size and adding a ton of nulls.
+* -D on the command line overrides macro definitions in the configuration file.
+
 03 March 2007
 
 * add-header action and lines, body_lines, header_lines tags for IMAP/POP3,
@@ -81,4 +87,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.23 2007-03-04 16:01:30 nicm Exp $
+$Id: CHANGES,v 1.24 2007-03-04 17:52:13 nicm Exp $
